--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "realestate",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "author": "",
-  "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^5.10.2",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.3",
-    "express-async-handler": "^1.2.0",
-    "express-oauth2-jwt-bearer": "^1.6.0",
-    "nodemon": "^3.1.0",
-    "prisma": "^5.10.2"
+    "framer-motion": "^10.8.5",
+    "react": "^18.2.0",
+    "react-accessible-accordion": "^5.0.0",
+    "react-countup": "^6.4.2",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-outside-click-handler": "^1.3.0",
+    "react-router-dom": "^6.22.3",
+    "swiper": "^9.1.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^3.1.0",
+    "vite": "^4.2.0"
   }
 }
